--- a/Topseal/blog/templates/index.html
+++ b/Topseal/blog/templates/index.html
@@ -65,7 +65,7 @@
 			<div class="row">
 				<div class="col-md-5 wrapthumbnail">
 					<a href="post.html">
-						<div class="thumbnail" style="background-image:url(/static/img/demopic/1.jpg);">
+						<div class="thumbnail" style="background-image: url({{articles.description_image.url}});">
 						</div>
 					</a>
 				</div>
@@ -73,11 +73,11 @@
 				<div class="col-md-7">
 					<div class="card-block">
 						<h2 class="card-title"><a href="post.html">{{articles.title}}</a></h2>
-						<h4 class="card-text">{{articles.content|slice:"100"}} ...</h4>
+						<h4 class="card-text">{{articles.content|slice:"200"}} ...</h4>
 						<div class="metafooter">
 							<div class="wrapfooter">
 								<span class="meta-footer-thumb">
-								<a href="author.html"><img class="author-thumb" alt="Sal" scr= "{{articles.author.profile_image.url}}"> </a>
+								<a href="author.html"><img class="author-thumb" alt="Sal" src= "{{articles.author.profile_image.url}}"> </a>
 								</span>
 								<span class="author-meta">
 								<span class="post-name"><a href="author.html">{{articles.author.first_name}} {{articles.author.last_name}}</a></span><br/>
