--- a/Topseal/blog/templates/article_details.html
+++ b/Topseal/blog/templates/article_details.html
@@ -1,21 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="">
-<meta name="author" content="">
-<link rel="icon" href="assets/img/favicon.ico">
-<title>Mediumish - A Medium style template by WowThemes.net</title>
-<!-- Bootstrap core CSS -->
-<link href="assets/css/bootstrap.min.css" rel="stylesheet">
-<!-- Fonts -->
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css?family=Righteous%7CMerriweather:300,300i,400,400i,700,700i" rel="stylesheet">
-<!-- Custom styles for this template -->
-<link href="assets/css/mediumish.css" rel="stylesheet">
-</head>
-<body>
+{% extends "webadmin/base.html" %}
+{% block body %}
+{% load static %}
 
 <!-- Begin Nav
 ================================================== -->
@@ -102,7 +87,7 @@
 				<!-- Begin Top Meta -->
 				<div class="row post-top-meta">
 					<div class="col-md-2">
-						<a href="author.html"><img class="author-thumb" src="https://www.gravatar.com/avatar/e56154546cf4be74e393c62d1ae9f9d4?s=250&amp;d=mm&amp;r=x" alt="Sal"></a>
+						<a href="author.html"><img class="author-thumb" src="{{articles.profile_images.url}}" alt="Sal"></a>
 					</div>
 					<div class="col-md-10">
 						<a class="link-dark" href="author.html">Sal</a><a href="#" class="btn follow">Follow</a>
@@ -112,7 +97,7 @@
 				</div>
 				<!-- End Top Menta -->
 
-				<h1 class="posttitle">18 Things You Should Learn Before Moving Into a New Home</h1>
+				<h1 class="posttitle">{{articles.title}}</h1>
 
 			</div>
 
@@ -122,21 +107,9 @@
 
 			<!-- Begin Post Content -->
 			<div class="article-post">
-				<p>
-					Holy grail funding non-disclosure agreement advisor ramen bootstrapping ecosystem. Beta crowdfunding iteration assets business plan paradigm shift stealth mass market seed money rockstar niche market marketing buzz market.
-				</p>
-				<p>
-					Burn rate release facebook termsheet equity technology. Interaction design rockstar network effects handshake creative startup direct mailing. Technology influencer direct mailing deployment return on investment seed round.
-				</p>
-				<p>
-					 Termsheet business model canvas user experience churn rate low hanging fruit backing iteration buyer seed money. Virality release launch party channels validation learning curve paradigm shift hypotheses conversion. Stealth leverage freemium venture startup business-to-business accelerator market.
-				</p>
-				<blockquote>
-					Gen-z strategy long tail churn rate seed money channels user experience incubator startup partner network low hanging fruit direct mailing. Client backing success startup assets responsive web design burn rate A/B testing metrics first mover advantage conversion.
-				</blockquote>
-				<p>
-					Freemium non-disclosure agreement lean startup bootstrapping holy grail ramen MVP iteration accelerator. Strategy market ramen leverage paradigm shift seed round entrepreneur crowdfunding social proof angel investor partner network virality.
-				</p>
+			<p>
+				{{articles.content}}
+			</p>
 			</div>
 			<!-- End Post Content -->
 
@@ -174,7 +147,7 @@
 					<img class="img-fluid img-thumb" src="assets/img/demopic/9.jpg" alt="">
 					</a>
 					<div class="card-block">
-						<h2 class="card-title"><a href="post.html">Best recreational places to visit on a holiday</a></h2>
+						<h2 class="card-title"><a href="post.html">{{article.title}}</a></h2>
 						<div class="metafooter">
 							<div class="wrapfooter">
 								<span class="meta-footer-thumb">
@@ -293,3 +266,5 @@
 <script src="assets/js/mediumish.js"></script>
 </body>
 </html>
+
+{% endblock %}
