--- a/Topseal/blog/templates/article_detail.html
+++ b/Topseal/blog/templates/article_detail.html
@@ -4,39 +4,7 @@
 
 <!-- Begin Nav
 ================================================== -->
-<nav class="navbar navbar-toggleable-md navbar-light bg-white fixed-top mediumnavigation">
-<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="container">
-	<!-- Begin Logo -->
-	<a class="navbar-brand" href="index.html">
-	<img src="assets/img/logo.png" alt="logo">
-	</a>
-	<!-- End Logo -->
-	<div class="collapse navbar-collapse" id="navbarsExampleDefault">
-		<!-- Begin Menu -->
-		<ul class="navbar-nav ml-auto">
-			<li class="nav-item active">
-			<a class="nav-link" href="index.html">Stories <span class="sr-only">(current)</span></a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link" href="post.html">Post</a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link" href="author.html">Author</a>
-			</li>
-		</ul>
-		<!-- End Menu -->
-		<!-- Begin Search -->
-		<form class="form-inline my-2 my-lg-0">
-			<input class="form-control mr-sm-2" type="text" placeholder="Search">
-			<span class="search-icon"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M20.067 18.933l-4.157-4.157a6 6 0 1 0-.884.884l4.157 4.157a.624.624 0 1 0 .884-.884zM6.5 11c0-2.62 2.13-4.75 4.75-4.75S16 8.38 16 11s-2.13 4.75-4.75 4.75S6.5 13.62 6.5 11z"></path></svg></span>
-		</form>
-		<!-- End Search -->
-	</div>
-</div>
-</nav>
+
 <!-- End Nav
 ================================================== -->
 
@@ -51,18 +19,25 @@
 		</div>
 		<hr>
 		<!-- Begin Featured Image -->
-		<img class="featured-image img-fluid" src="{{articles.description_image.url}}" alt="">
+		<img class="featured-image img-fluid" src="{{articles.description_image.url}}" alt="" style="border-radius: 10px;">
+		<blockquote>
+			<!-- Put image description here --> 
+			image description: Mr Tanko Mohammed poses for Topseal Media reporters 
+			<!-- Source: Google  -->
+		</blockquote>
 		<!-- End Featured Image -->
+		
+		<hr>
 
 		<!-- Begin Post Content -->
 		<div class="article-post">
 			<p>
 				{{articles.content}}
+				<blockquote>
+					Do you know that Nigeria ranks one of the Top African Countries with a large GPD?
+					<!-- LISTS, FACTS, NB's e.t.c -->
+				</blockquote>
 			</p>
-			<blockquote>
-				Gen-z strategy long tail churn rate seed money channels user experience incubator startup partner network low hanging fruit direct mailing. Client backing success startup assets responsive web design burn rate A/B testing metrics first mover advantage conversion.
-			</blockquote>
-			
 			</p>
 		</div>
 		<!-- End Post Content -->
@@ -70,10 +45,9 @@
 		<!-- Begin Tags -->
 		<div class="after-post-tags">
 			<ul class="tags">
-				<li><a href="#">Design</a></li>
-				<li><a href="#">Growth Mindset</a></li>
-				<li><a href="#">Productivity</a></li>
-				<li><a href="#">Personal Growth</a></li>
+				<li><a href="#">{{articles.tag1}}</a></li>
+				<li><a href="#">{{articles.tag2}}</a></li>
+				<li><a href="#">{{articles.tag3}}</a></li>
 			</ul>
 		</div>
 		<!-- End Tags -->
