--- a/Topseal/blog/templates/author.html
+++ b/Topseal/blog/templates/author.html
@@ -3,39 +3,6 @@
 {% load static %}
 <!-- Begin Nav
 ================================================== -->
-<nav class="navbar navbar-toggleable-md navbar-light bg-white fixed-top mediumnavigation">
-<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="container">
-	<!-- begin logo -->
-	<a class="navbar-brand" href="index.html">
-    <img src="{% static 'img/logo.png' %}" alt="">
-  </a>
-	<!-- end logo -->
-	<div class="collapse navbar-collapse" id="navbarsExampleDefault">
-		<!-- begin menu -->
-		<ul class="navbar-nav ml-auto">
-			<li class="nav-item active">
-			<a class="nav-link" href="index.html">Stories <span class="sr-only">(current)</span></a>
-			</li>
-      <li class="nav-item">
-			<a class="nav-link" href="post.html">Post</a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link" href="author.html">Author</a>
-			</li>
-		</ul>
-		<!-- end menu -->
-		<!-- begin search -->
-		<form class="form-inline my-2 my-lg-0">
-			<input class="form-control mr-sm-2" type="text" placeholder="Search">
-			<span class="search-icon"><svg class="svgIcon-use" width="25" height="25" viewbox="0 0 25 25"><path d="M20.067 18.933l-4.157-4.157a6 6 0 1 0-.884.884l4.157 4.157a.624.624 0 1 0 .884-.884zM6.5 11c0-2.62 2.13-4.75 4.75-4.75S16 8.38 16 11s-2.13 4.75-4.75 4.75S6.5 13.62 6.5 11z"></path></svg></span>
-		</form>
-		<!-- end search -->
-	</div>
-</div>
-</nav>
 <!-- End Nav
 ================================================== -->
 
@@ -49,7 +16,7 @@
 				<div class="row post-top-meta authorpage">
 					<div class="col-md-10 col-xs-12">
 						<h1>Sal</h1>
-						<span class="author-description">Founder of <a target="_blank" href="https://www.wowthemes.net">WowThemes.net</a> and creator of <strong>"Mediumish"</strong> theme that you're currently previewing. I professionally develop premium themes, templates & scripts since the Apocalypse (2012). You can reach me out on the social links below.</span>
+						<span class="author-description">{{author.first_name}} {{author.last_name}}<a target="_blank" href="https://www.wowthemes.net">WowThemes.net</a> and creator of <strong>"Mediumish"</strong> theme that you're currently previewing. I professionally develop premium themes, templates & scripts since the Apocalypse (2012). You can reach me out on the social links below.</span>
 						<div class="sociallinks"><a  target="_blank" href="https://www.facebook.com/wowthemesnet/"><i class="fa fa-facebook"></i></a> <span class="dot"></span> <a target="_blank" href="https://plus.google.com/s/wowthemesnet/top"><i class="fa fa-google-plus"></i></a></div>
 						<a target="_blank" href="https://twitter.com/wowthemesnet" class="btn follow">Follow</a>
 					</div>
