--- a/Topseal-website/blog/templates/article_detail.html
+++ b/Topseal-website/blog/templates/article_detail.html
@@ -10,7 +10,8 @@
 
 <!-- Begin Article
 ================================================== -->
-<div class="container">
+<div class="container" style="border-radius: 20px; font-family: 'Lato', sans-serif;
+font-family: 'Open Sans', sans-serif; font-weight:bold;">
 	<div class="row">
 			<!-- End Top Menta -->
 
@@ -30,7 +31,8 @@
 		<hr>
 
 		<!-- Begin Post Content -->
-		<div class="article-post">
+		<div class="article-post" style="border-radius: 20px; font-family: 'Lato', sans-serif;
+		font-family: 'Open Sans', sans-serif; font-weight:bold;">
 			<p>
 				{{articles.content}}
 				<blockquote>
