--- a/Topseal-website/blog/templates/article_list.html
+++ b/Topseal-website/blog/templates/article_list.html
@@ -21,7 +21,8 @@
 		<!-- begin post -->
 
 	{% for articles in object_list %}
-		<div class="card" style="border-radius: 20px;">
+		<div class="card" style="border-radius: 20px; font-family: 'Lato', sans-serif;
+		font-family: 'Open Sans', sans-serif; font-weight:bold;">
 				<img class="img-fluid" src="{{articles.description_image.url}}" alt="image" style="border-radius: 20px;">
 			</a>
 			<div class="card-block">
