--- a/Topseal-website/blog/templates/webadmin/base.html
+++ b/Topseal-website/blog/templates/webadmin/base.html
@@ -9,9 +9,13 @@
 <link rel="icon" href="{% static 'img/topseal.png' %}">
 <title>TopSeal</title>
 <!-- Bootstrap core CSS -->
+
 <link href="{% static 'css/bootstrap.min.css' %} " rel="stylesheet">
 <!-- Fonts -->
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/brands.min.css" integrity="sha512-G/T7HQJXSeNV7mKMXeJKlYNJ0jrs8RsWzYG7rVACye+qrcUhEAYKYzaa+VFy6eFzM2+/JT1Q+eqBbZFSHmJQew==" crossorigin="anonymous" referrerpolicy="no-referrer"  rel="stylesheet"/>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap'); 
+</style>
+
 <!-- Custom styles for this template -->
 <link href="{% static 'css/mediumish.css' %} " rel="stylesheet">
 </head>
@@ -23,13 +27,12 @@
         </button>
         <div class="container">
             <!-- Begin Logo -->
-            <a class="navbar-brand" href="index.html">
-            <img src="{% static 'img/topseal.png' %}" alt="logo" style="size: 70px;"></a>
+            <a class="navbar-brand" href="{% url 'blog:index' %}">
+            <img src="{% static 'img/logos.png' %}" alt="logo" style="width: 200px; object-fit:cover;"></a>
             <!-- End Logo -->
             <div class="collapse navbar-collapse" id="navbarsExampleDefault">
                 <!-- Begin Menu -->
-                <ul class="navbar-nav ml-auto">
-
+                <ul class="navbar-nav ml-auto" style="font-family:sans-serif; font-weight:bold;">
                     <li class="nav-item active">
                         <a class="nav-link" href="{% url 'blog:index' %}">Home <span class="sr-only">(current)</span></a>
                         </li>
@@ -57,10 +60,10 @@
         ================================================== -->
         <div class="container">
             <div class="mainheading">
-                <h1 class="sitetitle">TopSeal</h1>
+                <h1 class="sitetitle"></h1>
                 <p class="lead">
-                     News Blog of the Future
                 </p>
+                
             </div>
     {% block body %}
     {% endblock %}
