--- a/Topseal-website/blog/templates/webadmin/latest.html
+++ b/Topseal-website/blog/templates/webadmin/latest.html
@@ -2,14 +2,16 @@
 {% block body %}
 <!-- Begin Featured
 	================================================== -->
-	<section class="featured-posts">
+	<section class="featured-posts" style="border-radius: 20px; font-family: 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif; font-weight:bold;">
         <div class="section-title">
             <h2><span>Latest</span></h2>
         </div>
         <div class="card-columns listfeaturedtag">
         {% for articles in object_list %}
             <!-- begin post -->
-            <div class="card">
+            <div class="card" style="border-radius: 20px; font-family: 'Lato', sans-serif;
+            font-family: 'Open Sans', sans-serif; font-weight:bold;" >
                 <div class="row">
                     <div class="col-md-5 wrapthumbnail">
                         <a href="post.html">
