--- a/Topseal-website/blog/templates/webadmin/latest.html
+++ b/Topseal-website/blog/templates/webadmin/latest.html
@@ -1,7 +1,9 @@
 {% extends "webadmin/base.html" %}
 {% block body %}
+{% load static %}
 <!-- Begin Featured
 	================================================== -->
+<body>
 	<section class="featured-posts" style="border-radius: 20px; font-family: 'Lato', sans-serif;
     font-family: 'Open Sans', sans-serif; font-weight:bold;">
         <div class="section-title">
@@ -49,5 +51,11 @@
     
         </div>
         </section>
+<script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+<script src="{% static 'js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+</body>
+</html>
 
 {% endblock %}
