--- a/Topseal-website/blog/templates/webadmin/base.html
+++ b/Topseal-website/blog/templates/webadmin/base.html
@@ -18,6 +18,12 @@
 
 <!-- Custom styles for this template -->
 <link href="{% static 'css/mediumish.css' %} " rel="stylesheet">
+<link href="{% static 'css/create_article.css' %} " rel="stylesheet">
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
 <body>
