--- a/Topseal-website/blog/templates/create_article.html
+++ b/Topseal-website/blog/templates/create_article.html
@@ -73,7 +73,7 @@
       </div>
       
       </div>
-      <button class="is-success is-light is-outlined is-fullwidth submit">
+      <button class="custom_submit_btn">
          Submit
          </button>
 </form>
