--- a/Topseal-website/blog/templates/webadmin/base.html
+++ b/Topseal-website/blog/templates/webadmin/base.html
@@ -23,6 +23,8 @@
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<!-- Text Editor -->
+<link href="node_modules/froala-editor/css/froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
 
 </head>
 
@@ -49,7 +51,7 @@
                     </li>
                     
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'blog:latest' %}">Top News</a>
+                        <a class="nav-link" href="{% url 'blog:topnews' %}">Top News</a>
                     </li>
 
                     <li class="nav-item">
