--- a/Topseal-website/blog/templates/create_article.html
+++ b/Topseal-website/blog/templates/create_article.html
@@ -18,9 +18,11 @@
             <label for="title">Title: </label>
             <input type="text" name="title">
          </div>
-         <div class="">
-            <label for="content_box">Content: </label>
-            <div class="content_box">
+         <label for="content_box">Content: </label>
+         <div class="content_box" id="">
+            
+            <div class="">
+               
             </div>
          </div>
       </div>
