--- a/Topseal-website/blog/templates/webadmin/topnews.html
+++ b/Topseal-website/blog/templates/webadmin/topnews.html
@@ -7,7 +7,7 @@
 	<section class="featured-posts" style="border-radius: 20px; font-family: 'Lato', sans-serif;
     font-family: 'Open Sans', sans-serif; font-weight:bold;">
         <div class="section-title">
-            <h2><span>Latest</span></h2>
+            <h2><span>Top News</span></h2>
         </div>
         <div class="card-columns listfeaturedtag">
         {% for articles in object_list %}
