--- a/Topseal-website/blog/templates/webadmin/base.html
+++ b/Topseal-website/blog/templates/webadmin/base.html
@@ -19,6 +19,9 @@
 <!-- Custom styles for this template -->
 <link href="{% static 'css/mediumish.css' %} " rel="stylesheet">
 <link href="{% static 'css/create_article.css' %} " rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
+<script src="https://cdn.ckeditor.com/ckeditor5/35.3.2/classic/ckeditor.js"></script>
 
 <!-- Font Awesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
