--- a/Topseal-website/blog/templates/create_article.html
+++ b/Topseal-website/blog/templates/create_article.html
@@ -1,84 +1,144 @@
 {% extends "webadmin/base.html" %}
 {% load static %}
 {% block body %}
-<div class="create-article">
-<!-- <form method="post" enctype="multipart/form-data">
-   {% csrf_token %}
-   {{form}}
-   
-   <button class="is-success is-light is-outlined is-fullwidth">
-           Submit
-   </button>
-   </form> -->
-<form method="" id="article_form">
-   <h1>Create Article</h1>
-   <div class="flex section">
-      <div class="main">
-         <div class="">
-            <label for="title">Title: </label>
-            <input type="text" name="title">
-         </div>
-         <label for="content_box">Content: </label>
-         <div class="content_box" id="">
-            
+<body>        
+    <!-- End Nav
+        ================================================== -->
+
+    <!-- Begin Site Title
+        ================================================== -->
+    <div class="container" style="margin-top: -90px;">
+      <div class="mainheading">
+        <h1 class="sitetitle"></h1>
+        <p class="lead"></p>
+      </div>
+
+      <form method="" id="article_form">
+        <h1>Create Article</h1>
+        <div class="flex section">
+          <div class="main">
             <div class="">
-               
+              <label for="title">Title: </label>
+              <input type="text" name="title" />
             </div>
-         </div>
-      </div>
-      <div class="aside">
-         <div class="">
-            <label for="author">Author: </label>
-            <div class="screen">
-               Omosehin I. Olayinka
+            <!-- <div class="">
+              <label for="content_box">Content: </label>
+              <div class="content_box"></div>
+            </div> -->
+
+            <div class="">
+              <label for="content_box">Content: </label>
+              <div id="editor">
+                Lorem ipsum dolor sit amet consectetur adipiscing elit curae,
+                quisque penatibus proin risus cursus tempor. Aliquam vestibulum
+                porta justo nulla aptent mus volutpat vel nec est, facilisis
+                curae condimentum ornare in nam lacus tempus euismod. Hac
+                vivamus parturient vehicula dui purus sociis quam, ligula
+                blandit massa commodo fusce enim dignissim tempor, ridiculus
+                vestibulum nam posuere nec lobortis. Pellentesque ornare
+                himenaeos at natoque augue vehicula cursus nullam nunc fermentum
+                luctus tempus commodo, mus est proin tellus inceptos facilisi
+                interdum venenatis turpis et eget volutpat dictum, auctor aenean
+                suscipit nec varius elementum nostra lobortis tortor malesuada
+                erat vulputate. Dignissim ligula urna per ad nibh senectus erat,
+                convallis libero fringilla platea vulputate magna molestie nam,
+                varius id lacinia sodales ultricies potenti. Habitant lacus
+                ultricies lobortis leo dictum ad ut ante, class platea risus
+                nisl cras vehicula. Eros aenean elementum placerat velit natoque
+                integer fusce mollis sapien tortor aliquet cras accumsan, cum
+                platea fringilla netus posuere nunc fames ac habitasse curabitur
+                ligula porttitor. At litora purus accumsan nulla magna quis,
+                duis commodo vehicula ultricies iaculis primis molestie,
+                vestibulum consequat rutrum venenatis mus. Tristique lobortis
+                sociis habitasse integer himenaeos tempus facilisi nostra,
+                inceptos leo sollicitudin volutpat libero risus in, aenean arcu
+                dis mattis fermentum facilisis fames. Mauris nisl suscipit
+                aliquet est bibendum porta, sapien rhoncus mi taciti fringilla
+                id erat, eleifend per dictum litora accumsan. Lobortis donec
+                commodo mattis vehicula porta suscipit, pharetra porttitor
+                maecenas dictum parturient, facilisis sed taciti gravida
+                conubia. Urna mattis per ullamcorper maecenas penatibus leo
+                lectus praesent sodales ultricies, ac sollicitudin aptent
+                facilisi nunc senectus purus mauris fermentum, etiam risus
+                malesuada proin faucibus semper natoque taciti viverra.
+                Fermentum fusce iaculis ridiculus nisi auctor tortor aliquam
+                viverra luctus vel tempus, ornare integer montes condimentum
+                quam mauris velit rutrum penatibus maecenas. Enim at curae
+                penatibus curabitur tempor vel porta metus, neque interdum proin
+                hendrerit massa venenatis senectus, tortor condimentum taciti
+                orci sociis pretium malesuada. Dictum orci nisl arcu cras id
+                fusce gravida nec iaculis, habitant ultricies netus parturient
+                ullamcorper praesent auctor ac, conubia scelerisque dapibus
+                lobortis sem ad sagittis faucibus. Ultrices sollicitudin dapibus
+                maecenas volutpat laoreet tristique sed, inceptos elementum
+                dictum diam semper metus enim dignissim, sem nam torquent
+                porttitor lobortis purus. Interdum ut sapien quam felis curae
+                nec sagittis ante purus, taciti tempus volutpat nisi praesent
+                odio aliquam justo scelerisque, sociosqu vehicula vulputate
+                egestas cursus velit rhoncus facilisi.
+              </div>
             </div>
-         </div>
-         <div class="">
-            <label for="description_image">Description image: </label>
-            <input type="file" name="description_image"  accept="image/png, image/jpeg">
-         </div>
-         <div class="">
-            <label for="image_description">Image description: </label>
-            <input type="text" name="image_description">
-         </div>
-         <div id="tags">
-            <div class="tag_screen flex">
-               <p>Tags:</p>
-               <div class="tags_select screen">
-                  <span class="tag_item">Web Development  <i class="fa fa-times" aria-hidden="true"></i></span>
+          </div>
+          <div class="aside">
+            <div class="">
+              <label for="author">Author: </label>
+              <div class="screen">Omosehin I. Olayinka</div>
+            </div>
+            <div class="">
+              <label for="description_image">Description image: </label>
+              <input
+                type="file"
+                name="description_image"
+                accept="image/png, image/jpeg"
+              />
+            </div>
+            <div class="">
+              <label for="image_description">Image description: </label>
+              <input type="text" name="image_description" />
+            </div>
+            <div id="tags">
+              <div class="tag_screen flex">
+                <p>Tags:</p>
+                <div class="tags_select screen">
+                  <span class="tag_item"
+                    >Web Development
+                    <i class="fa fa-times" aria-hidden="true"></i
+                  ></span>
                   <!-- <span class="tag_item">Web Development  <i class="fa fa-times" aria-hidden="true"></i></span>
-                     <span class="tag_item">Web Development  <i class="fa fa-times" aria-hidden="true"></i></span>  --> 
-               </div>
+                           <span class="tag_item">Web Development  <i class="fa fa-times" aria-hidden="true"></i></span>  -->
+                </div>
+              </div>
+              <label for="tags_selection"
+                >Select multiple tags (up to 3 different tags)</label
+              >
+              <select name="tags_selection" id="tags_selection">
+                <option value="">--</option>
+                <option value="Coding">Coding</option>
+                <option value="Web Development">Web Development</option>
+                <option value="Web Design">Web Design</option>
+              </select>
             </div>
-            <label for="tags_selection">Select multiple tags (up to 3 different tags)</label>
-            <select name="tags_selection" id="tags_selection">
-               <option value="">--</option>
-               <option value="Coding">Coding</option>
-               <option value="Web Development">Web Development</option>
-               <option value="Web Design">Web Design</option>
-            </select>
-         </div>
-         <div class="">
-            <label for="featured">Featured: </label>
-            <select name="featured">
-               <option value="No">No</option>
-               <option value="Yes">Yes</option>
-            </select>
-         </div>
-         <div class="">
-            <label for="top_story">Top Story: </label>
-            <select name="featured">
-               <option value="No">No</option>
-               <option value="Yes">Yes</option>
-            </select>
-         </div>
-      </div>
-      
-      </div>
-      <button class="custom_submit_btn">
-         Submit
-         </button>
-</form>
+            <div class="">
+              <label for="featured">Featured: </label>
+              <select name="featured">
+                <option value="No">No</option>
+                <option value="Yes">Yes</option>
+              </select>
+            </div>
+            <div class="">
+              <label for="top_story">Top Story: </label>
+              <select name="featured">
+                <option value="No">No</option>
+                <option value="Yes">Yes</option>
+              </select>
+            </div>
+          </div>
+        </div>
+        <button class="custom_submit_btn" style="color: rgb(59, 86, 126); margin-bottom:50px; border:2px solid rgb(54, 54, 110); border-radius: 10px; padding:3px; font-family: fantasy; margin-top:15px; width:300px; text-align:center;">Submit</button>
+      </form>
+    </div>
+
+    <!-- <script src="../blog/static/js/editor.js"></script> -->
 
 
 <script src="{% static 'js/jquery.min.js' %}"></script>
@@ -86,6 +146,14 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+<script>
+   ClassicEditor.create(document.querySelector("#editor"))
+     .then((editor) => {
+       console.log(editor);
+     })
+     .catch((error) => {
+       console.error(error);
+     });
+ </script>
 </body>
-</html>
-{% endblock body %}
+{% endblock %}
