--- a/Topseal-website/blog/templates/webadmin/topnews.html
+++ b/Topseal-website/blog/templates/webadmin/topnews.html
@@ -35,7 +35,10 @@
                                     </span>
                                     <span class="author-meta">
                                     <span class="post-name"><a href="author.html">{{articles.author.first_name}} {{articles.author.last_name}}</a></span><br/>
-                                    <span class="post-read">{{articles.published_at|timesince}} ago</span>
+                                    {% comment %}
+                                      <span class="post-read">{{articles.published_at|timesince}} ago</span>
+                                    {% endcomment %}
+                                    
                                     </span>
                                    
                                 </div>
